--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Hora Igual</h1>
+        <h1><a href="index.html">Hora Igual</a></h1>
     </header>
     <section>
         <div class="centraliza">
