--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="centraliza">
             <p>
                 Hora:
-                <input type="number" name="txtHora" id="txtHora" min="0" max="23">
+                <input type="number" name="txtHora" id="txtHora" min="0" max="23" onkeydown="if(event.key==='Enter'){verificar();}">
                 <input type="button" value="Ok" onclick="verificar()">
             </p>
         </div>
