--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <header>
         <h1><a href="index.html">Hora Igual</a></h1>
     </header>
-    <section>
-        <div class="centraliza">
-            <p>
-                Hora:
-                <input type="number" name="txtHora" id="txtHora" min="0" max="23" onkeydown="if(event.key==='Enter'){verificar();}">
-                <input type="button" value="Ok" onclick="verificar()">
-            </p>
-        </div>
-        <div class="centraliza" id="resultado">
-            
-        </div>
-    </section>
+    <main>
+        <section>
+            <div class="centraliza">
+                <p>
+                    Hora:
+                    <input type="number" name="txtHora" id="txtHora" min="0" max="23" onkeydown="if(event.key==='Enter'){verificar();}">
+                    <input type="button" value="Ok" onclick="verificar()">
+                </p>
+            </div>
+            <div class="centraliza" id="resultado">
+        
+            </div>
+        </section>
+    </main>
     <footer>
         <p>
             <a href="https://github.com/sbarbosadiego" target="_blank">Diego Barbosa</a>
