--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     </main>
     <footer>
         <p>
-            <a href="https://github.com/sbarbosadiego" target="_blank">Diego Barbosa</a>
+            <a href="https://github.com/sbarbosadiego" target="_blank">
+                <img src="imagens/github.png" alt="">
+            </a>
+            
+            <a href="https://www.linkedin.com/in/diegobarbosad/" target="_blank">
+                <img src="imagens/linkedin.png" alt="">
+            </a>
         </p>
     </footer>
     <script src="script.js" src="teste.js"></script>
