--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora Igual</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/relogio.png" type="image/x-icon">
 </head>
 <body>
     <header>
